components/3.22.x/iec60870-client-component.md
# IEC 60870 Client

**Since Camel 2.20**

**Both producer and consumer are supported**

The IEC 60870-5-104 Client component provides access to IEC 60870 servers using the [Eclipse NeoSCADA](http://eclipse.org/eclipsescada) implementation.

Maven users will need to add the following dependency to their `pom.xml` for this component:

```xml
<dependency>
    <groupId>org.apache.camel</groupId>
    <artifactId>camel-iec60870</artifactId>
    <version>x.x.x</version>
    <!-- use the same version as your Camel core version -->
</dependency>
```

## URI format

The URI syntax of the endpoint is:

```none
iec60870-client:host:port/00-01-02-03-04
```

The information object address is encoded in the path in the syntax shows above. Please note that always the full, 5 octet address format is being used. Unused octets have to be filled with zero.

A connection instance if identified by the host and port part of the URI, plus all parameters in the "id" group. If a new connection id is encountered the connection options will be evaluated and the connection instance is created with those options.

> **Note**
> If two URIs specify the same connection (host, port, …​) but different connection options, then it is undefined which of those connection options will be used.

The final connection options will be evaluated in the following order:

-   If present, the connectionOptions parameter will be used
    
-   Otherwise the defaultConnectionOptions instance is copied and customized in the following steps
    
-   Apply protocolOptions if present
    
-   Apply dataModuleOptions if present
    
-   Apply all explicit connection parameters (e.g. timeZone)
    

## Configuring Options

Camel components are configured on two separate levels:

-   component level
    
-   endpoint level
    

### Configuring Component Options

The component level is the highest level which holds general and common configurations that are inherited by the endpoints. For example a component may have security settings, credentials for authentication, urls for network connection and so forth.

Some components only have a few options, and others may have many. Because components typically have pre configured defaults that are commonly used, then you may often only need to configure a few options on a component; or none at all.

Configuring components can be done with the [Component DSL](../../manual/component-dsl.md), in a configuration file (application.properties|yaml), or directly with Java code.

### Configuring Endpoint Options

Where you find yourself configuring the most is on endpoints, as endpoints often have many options, which allows you to configure what you need the endpoint to do. The options are also categorized into whether the endpoint is used as consumer (from) or as a producer (to), or used for both.

Configuring endpoints is most often done directly in the endpoint URI as path and query parameters. You can also use the [Endpoint DSL](../../manual/Endpoint-dsl.md) and [DataFormat DSL](../../manual/dataformat-dsl.md) as a _type safe_ way of configuring endpoints and data formats in Java.

A good practice when configuring options is to use [Property Placeholders](../../manual/using-propertyplaceholder.md), which allows to not hardcode urls, port numbers, sensitive information, and other settings. In other words placeholders allows to externalize the configuration from your code, and gives more flexibility and reuse.

The following two sections lists all the options, firstly for the component followed by the endpoint.

## Component Options

The IEC 60870 Client component supports 4 options, which are listed below.

   
| Name | Description | Default | Type |
| --- | --- | --- | --- |
| **defaultConnectionOptions** (common) | Default connection options. |  | ClientOptions |
| **bridgeErrorHandler** (consumer) | Allows for bridging the consumer to the Camel routing Error Handler, which mean any exceptions occurred while the consumer is trying to pickup incoming messages, or the likes, will now be processed as a message and handled by the routing Error Handler. By default the consumer will use the org.apache.camel.spi.ExceptionHandler to deal with exceptions, that will be logged at WARN or ERROR level and ignored. | false | boolean |
| **lazyStartProducer** (producer) | Whether the producer should be started lazy (on the first message). By starting lazy you can use this to allow CamelContext and routes to startup in situations where a producer may otherwise fail during starting and cause the route to fail being started. By deferring this startup to be lazy then the startup failure can be handled during routing messages via Camel’s routing error handlers. Beware that when the first message is processed then creating and starting the producer may take a little time and prolong the total processing time of the processing. | false | boolean |
| **autowiredEnabled** (advanced) | Whether autowiring is enabled. This is used for automatic autowiring options (the option must be marked as autowired) by looking up in the registry to find if there is a single instance of matching type, which then gets configured on the component. This can be used for automatic configuring JDBC data sources, JMS connection factories, AWS Clients, etc. | true | boolean |

## Endpoint Options

The IEC 60870 Client endpoint is configured using URI syntax:

iec60870-client:uriPath

with the following path and query parameters:

### Path Parameters (1 parameters)

   
| Name | Description | Default | Type |
| --- | --- | --- | --- |
| **uriPath** (common) | **Required** The object information address. |  | ObjectAddress |

### Query Parameters (20 parameters)

   
| Name | Description | Default | Type |
| --- | --- | --- | --- |
| **dataModuleOptions** (common) | Data module options. |  | DataModuleOptions |
| **protocolOptions** (common) | Protocol options. |  | ProtocolOptions |
| **bridgeErrorHandler** (consumer (advanced)) | Allows for bridging the consumer to the Camel routing Error Handler, which mean any exceptions occurred while the consumer is trying to pickup incoming messages, or the likes, will now be processed as a message and handled by the routing Error Handler. By default the consumer will use the org.apache.camel.spi.ExceptionHandler to deal with exceptions, that will be logged at WARN or ERROR level and ignored. | false | boolean |
| **exceptionHandler** (consumer (advanced)) | To let the consumer use a custom ExceptionHandler. Notice if the option bridgeErrorHandler is enabled then this option is not in use. By default the consumer will deal with exceptions, that will be logged at WARN or ERROR level and ignored. |  | ExceptionHandler |
| **exchangePattern** (consumer (advanced)) | 
Sets the exchange pattern when the consumer creates an exchange.

Enum values:

-   InOnly
    
-   InOut
    
-   InOptionalOut
    





 |  | ExchangePattern |
| **lazyStartProducer** (producer (advanced)) | Whether the producer should be started lazy (on the first message). By starting lazy you can use this to allow CamelContext and routes to startup in situations where a producer may otherwise fail during starting and cause the route to fail being started. By deferring this startup to be lazy then the startup failure can be handled during routing messages via Camel’s routing error handlers. Beware that when the first message is processed then creating and starting the producer may take a little time and prolong the total processing time of the processing. | false | boolean |
| **acknowledgeWindow** (connection) | Parameter W - Acknowledgment window. | 10 | short |
| **adsuAddressType** (connection) | 

The common ASDU address size. May be either SIZE\_1 or SIZE\_2.

Enum values:

-   SIZE\_1
    
-   SIZE\_2
    





 |  | ASDUAddressType |
| **causeOfTransmissionType** (connection) | 

The cause of transmission type. May be either SIZE\_1 or SIZE\_2.

Enum values:

-   SIZE\_1
    
-   SIZE\_2
    





 |  | CauseOfTransmissionType |
| **informationObjectAddressType** (connection) | 

The information address size. May be either SIZE\_1, SIZE\_2 or SIZE\_3.

Enum values:

-   SIZE\_1
    
-   SIZE\_2
    
-   SIZE\_3
    





 |  | InformationObjectAddressType |
| **maxUnacknowledged** (connection) | Parameter K - Maximum number of un-acknowledged messages. | 15 | short |
| **timeout1** (connection) | Timeout T1 in milliseconds. | 15000 | int |
| **timeout2** (connection) | Timeout T2 in milliseconds. | 10000 | int |
| **timeout3** (connection) | Timeout T3 in milliseconds. | 20000 | int |
| **causeSourceAddress** (data) | Whether to include the source address. |  | byte |
| **connectionTimeout** (data) | Timeout in millis to wait for client to establish a connected connection. | 10000 | int |
| **ignoreBackgroundScan** (data) | Whether background scan transmissions should be ignored. | true | boolean |
| **ignoreDaylightSavingTime** (data) | Whether to ignore or respect DST. | false | boolean |
| **timeZone** (data) | The timezone to use. May be any Java time zone string. | UTC | TimeZone |
| **connectionId** (id) | An identifier grouping connection instances. |  | String |

## Message Headers

The IEC 60870 Client component supports 4 message header(s), which is/are listed below:

   
| Name | Description | Default | Type |
| --- | --- | --- | --- |
| **CamelIec60870Value** (consumer) Constant: [`IEC60870_VALUE`](https://javadoc.io/doc/org.apache.camel/camel-iec60870/latest/org/apache/camel/component/iec60870/Constants.html#IEC60870_VALUE) | The value. |  | Object |
| **CamelIec60870Timestamp** (consumer) Constant: [`IEC60870_TIMESTAMP`](https://javadoc.io/doc/org.apache.camel/camel-iec60870/latest/org/apache/camel/component/iec60870/Constants.html#IEC60870_TIMESTAMP) | The timestamp of the value. |  | long |
| **CamelIec60870Quality** (consumer) Constant: [`IEC60870_QUALITY`](https://javadoc.io/doc/org.apache.camel/camel-iec60870/latest/org/apache/camel/component/iec60870/Constants.html#IEC60870_QUALITY) | The quality information of the value. |  | QualityInformation |
| **CamelIec60870Overflow** (consumer) Constant: [`IEC60870_OVERFLOW`](https://javadoc.io/doc/org.apache.camel/camel-iec60870/latest/org/apache/camel/component/iec60870/Constants.html#IEC60870_OVERFLOW) | Is overflow. |  | boolean |

## Spring Boot Auto-Configuration

When using iec60870-client with Spring Boot make sure to use the following Maven dependency to have support for auto configuration:

```xml
<dependency>
  <groupId>org.apache.camel.springboot</groupId>
  <artifactId>camel-iec60870-starter</artifactId>
  <version>x.x.x</version>
  <!-- use the same version as your Camel core version -->
</dependency>
```

The component supports 10 options, which are listed below.

   
| Name | Description | Default | Type |
| --- | --- | --- | --- |
| **camel.component.iec60870-client.autowired-enabled** | Whether autowiring is enabled. This is used for automatic autowiring options (the option must be marked as autowired) by looking up in the registry to find if there is a single instance of matching type, which then gets configured on the component. This can be used for automatic configuring JDBC data sources, JMS connection factories, AWS Clients, etc. | true | Boolean |
| **camel.component.iec60870-client.bridge-error-handler** | Allows for bridging the consumer to the Camel routing Error Handler, which mean any exceptions occurred while the consumer is trying to pickup incoming messages, or the likes, will now be processed as a message and handled by the routing Error Handler. By default the consumer will use the org.apache.camel.spi.ExceptionHandler to deal with exceptions, that will be logged at WARN or ERROR level and ignored. | false | Boolean |
| **camel.component.iec60870-client.default-connection-options** | Default connection options. The option is a org.apache.camel.component.iec60870.client.ClientOptions type. |  | ClientOptions |
| **camel.component.iec60870-client.enabled** | Whether to enable auto configuration of the iec60870-client component. This is enabled by default. |  | Boolean |
| **camel.component.iec60870-client.lazy-start-producer** | Whether the producer should be started lazy (on the first message). By starting lazy you can use this to allow CamelContext and routes to startup in situations where a producer may otherwise fail during starting and cause the route to fail being started. By deferring this startup to be lazy then the startup failure can be handled during routing messages via Camel’s routing error handlers. Beware that when the first message is processed then creating and starting the producer may take a little time and prolong the total processing time of the processing. | false | Boolean |
| **camel.component.iec60870-server.autowired-enabled** | Whether autowiring is enabled. This is used for automatic autowiring options (the option must be marked as autowired) by looking up in the registry to find if there is a single instance of matching type, which then gets configured on the component. This can be used for automatic configuring JDBC data sources, JMS connection factories, AWS Clients, etc. | true | Boolean |
| **camel.component.iec60870-server.bridge-error-handler** | Allows for bridging the consumer to the Camel routing Error Handler, which mean any exceptions occurred while the consumer is trying to pickup incoming messages, or the likes, will now be processed as a message and handled by the routing Error Handler. By default the consumer will use the org.apache.camel.spi.ExceptionHandler to deal with exceptions, that will be logged at WARN or ERROR level and ignored. | false | Boolean |
| **camel.component.iec60870-server.default-connection-options** | Default connection options. The option is a org.apache.camel.component.iec60870.server.ServerOptions type. |  | ServerOptions |
| **camel.component.iec60870-server.enabled** | Whether to enable auto configuration of the iec60870-server component. This is enabled by default. |  | Boolean |
| **camel.component.iec60870-server.lazy-start-producer** | Whether the producer should be started lazy (on the first message). By starting lazy you can use this to allow CamelContext and routes to startup in situations where a producer may otherwise fail during starting and cause the route to fail being started. By deferring this startup to be lazy then the startup failure can be handled during routing messages via Camel’s routing error handlers. Beware that when the first message is processed then creating and starting the producer may take a little time and prolong the total processing time of the processing. | false | Boolean |